fix white space

--- a/css/style.scss
+++ b/css/style.scss
@@ -271,7 +271,7 @@ body {
 
 .profile-pic {
     width: 70%;
-    margin: 0 5rem;
+    margin: 0 4rem;
     border-radius: 50%;
 
     @include respond(phone) { 
